tests/sema/err_call_args.ax
fn foo(a: i32, b: i32):
    return 1

fn main():
    foo(1)
